--- a/index.html
+++ b/index.html
@@ -40,3 +40,10 @@ description: "you need sleep."
     {% endif %}
 </ul>
 {% endif %}
+
+<script type="text/javascript" src="http://cdn.mathjax.org/math...">
+</script>
+
+<script type="text/x-mathjax-config">
+Hub.Queue(["Typeset", MathJax.Hub]);
+</script>
