--- a/about.html
+++ b/about.html
@@ -16,11 +16,10 @@ header-img: "img/post-bg-rwd.jpg"
 
     <!--copied from markdown -->
     <blockquote><p>懒惰：<br>
-    是这样一种品质，它使得你花大力气去避免消耗过多的精力。
-    它敦促你写出节省体力，便于使用的程序。为此你会写出完善的文档，以免别人问你太多问题。
-    <br>- Larry Wall</p></blockquote>
+    如题，暂无
+    <br>- zwp</p></blockquote>
 
-    <p>Hey，我是<strong>Tianhaoo</strong>，苏州大学在读本科生。</p>
+    <p>Hey，我是<strong>you</strong>。</p>
 
     <del>喜欢唱、跳、rap、篮球</del>
 
@@ -39,12 +38,10 @@ header-img: "img/post-bg-rwd.jpg"
 <!-- English Version -->
 <div class="en post-container">
     <blockquote><p>Laziness<br>
-        The quality that makes you go to great effort to reduce overall energy expenditure. 
-        It makes you write labor-saving programs that other people will find useful, 
-        and document what you wrote so you don't have to answer so many questions about it.
-    <br>- Larry Wall</p></blockquote>
+    
+    <br>- zwp</p></blockquote>
 
-    <p>Hi, I am <strong>Tianhaoo</strong>. I am a CS student studying in Soochow University</p>
+    <p>Hi, I am <strong>you</strong>. </p>
 
     <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/tianhaoo">Github·Tianhaoo</a>.</p>
     
